# fast-api-game_api

./: .env  pyproject.toml
project/: main.py
project/api/routes/: api.py
project/api/routes/endpoints/: games.py  users.py
project/core/: auth.py  configs.py  database.py  deps.py  security.py
project/models/: __all_models.py  game_model.py  user_model.py
project/schemas/: game_schemas.py  user_schema.py
project/utils/: exceptions.py
